--- a/src/main/resources/com/dija/lecturehomework/hello-view.fxml
+++ b/src/main/resources/com/dija/lecturehomework/hello-view.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuItem?>
 
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23.0.1" fx:controller="com.dija.lecturehomework.HelloController">
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23.0.1" fx:controller="com.dija.lecturehomework.HelloController2">
   <!-- Menu fixado no topo -->
   <top>
     <MenuBar fx:id="menuBar">
